<resources>
    <string name="app_name">Medic Buddy</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_reminder">New Reminder</string>
    <string name="report">Reports</string>
    <string name="skipped">Skipped</string>
    <string name="taken">Taken</string>
    <string name="medicine_name">Medicine Name</string>
    <string name="dosage_e_g_22_mg">Dosage (e.g 22 mg)</string>
    <string name="select_time">Select Time</string>
    <string name="days">Days</string>
    <string name="mon">MON</string>
    <string name="sun">SUN</string>
    <string name="sat">SAT</string>
    <string name="fri">FRI</string>
    <string name="thu">THU</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>

    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string name="set_reminder">Set Reminder</string>
    <string name="reminder_saved">Great reminder set for</string>
    <string name="no_reminders_text">No reminders found.Click the \'+\' to add your reminders for medicines.</string>
    <string name="take_medic">Take %s %s</string>
    <string name="notification_body">Hi it\'s time to take your medicine. Please take %s %s</string>
    <string name="skip">Skip</string>
    <string name="medicine_name_required">Medicine name required</string>
    <string name="enter_dosage">Please enter dosage</string>
    <string name="select_day">Select at least one day in week</string>
    <string name="set_time_alert">Specify a time for your reminder</string>
    <string name="dismiss">dismiss</string>
    <string name="title_activity_report">ReportActivity</string>
    <string name="lbl_report">Report</string>
    <string name="day">Day</string>
    <string name="action_at">Action At</string>
    <string name="status">Status</string>
    <string name="all">All</string>
    <string name="pending">Pending</string>
    <string name="reminders">Reminders</string>
</resources>
