<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.cricbuzz.medicbuddy.ui.reminders.RemindersActivity">

    <item
        android:id="@+id/action_report"
        android:orderInCategory="100"
        android:title="@string/report"
        android:icon="@drawable/ic_filter_list_white_24dp"
        app:showAsAction="always" >

        <menu>
            <item
                android:id="@+id/action_skipped"
                android:title="@string/skipped" />

            <item
                android:id="@+id/action_taken"
                android:title="@string/taken" />

            <item
                android:id="@+id/action_show_all"
                android:title="@string/all" />

        </menu>

    </item>


</menu>
