<layout>

    <data>

        <variable
            name="model"
            type="com.cricbuzz.medicbuddy.ui.newReminder.BindingModel" />

        <variable
            name="handler"
            type="com.cricbuzz.medicbuddy.ui.newReminder.EventHandlers" />

    </data>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            tools:context="com.cricbuzz.medicbuddy.ui.newReminder.NewReminderFragment">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:etError="@{model.errorMedicName}">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/medicine_name"
                    android:inputType="textCapSentences"
                    android:maxLines="1"
                    android:text="@={model.medicName}" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:etError="@{model.errorDosage}">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/dosage_e_g_22_mg"
                    android:inputType="textCapSentences"
                    android:maxLines="1"
                    android:text="@={model.dosage}" />

            </android.support.design.widget.TextInputLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/days"
                android:fontFamily="@font/quicksand_bold"
                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />

            <com.cricbuzz.medicbuddy.ui.common.custom.FlowLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:checked="@={model.mon}"
                    android:fontFamily="@font/quicksand_light"
                    android:onClick="@{() -> handler.onDayClicked()}"
                    android:text="@string/mon" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:checked="@={model.tue}"
                    android:fontFamily="@font/quicksand_light"
                    android:onClick="@{() -> handler.onDayClicked()}"
                    android:text="@string/tue" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:checked="@={model.wed}"
                    android:fontFamily="@font/quicksand_light"
                    android:onClick="@{() -> handler.onDayClicked()}"
                    android:text="@string/wed" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:checked="@={model.thu}"
                    android:fontFamily="@font/quicksand_light"
                    android:onClick="@{() -> handler.onDayClicked()}"
                    android:text="@string/thu" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:checked="@={model.fri}"
                    android:fontFamily="@font/quicksand_light"
                    android:onClick="@{() -> handler.onDayClicked()}"
                    android:text="@string/fri" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:checked="@={model.sat}"
                    android:fontFamily="@font/quicksand_light"
                    android:onClick="@{() -> handler.onDayClicked()}"
                    android:text="@string/sat" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:checked="@={model.sun}"
                    android:fontFamily="@font/quicksand_light"
                    android:onClick="@{() -> handler.onDayClicked()}"
                    android:text="@string/sun" />

            </com.cricbuzz.medicbuddy.ui.common.custom.FlowLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/ic_add_alarm_18dp"
                android:focusable="true"
                android:fontFamily="@font/quicksand_bold"
                android:gravity="center_vertical"
                android:hint="@string/select_time"
                android:onClick="@{()->handler.setTime()}"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:text="@={model.time}"
                android:textSize="16sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/quicksand_bold"
                android:onClick="@{()->handler.setReminder()}"
                android:text="@string/set_reminder" />


        </LinearLayout>
    </ScrollView>
</layout>