<layout>

    <data>

        <variable
            name="reminder"
            type="com.cricbuzz.medicbuddy.models.Reminders"/>
    </data>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".ui.report.ReportFragment">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{reminder.medicineName}"
            android:textAppearance="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Large"
            tools:text="Paracetamol" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@{reminder.dosage}"
            android:textAppearance="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Small"
            tools:text="500 mg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_alarm_white_18dp"
            android:fontFamily="@font/quicksand_bold"
            android:gravity="center_vertical"
            android:text="@{reminder.time}"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            tools:text="06:00 pm" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:drawableEnd="@android:drawable/arrow_down_float"
                android:drawablePadding="8dp"
                android:focusable="true"
                android:gravity="center"
                android:padding="16dp"

                android:text="January" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:drawableEnd="@android:drawable/arrow_down_float"
                android:drawablePadding="8dp"
                android:gravity="center"
                android:padding="16dp"
                android:text="2012" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/day"
                android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/action_at"
                android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/status"
                android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle" />
        </LinearLayout>


    </LinearLayout>
</layout>